<resources>
    <string name="app_name">Kids in Nature</string>
    <string name="text_category_animals">Djur</string>
    <string name="text_headline">KIDS in NATURE</string>
    <string name="text_sub_headline">Samla växter, djur och natur</string>
    <string name="text_sub_headline_animal">Din samling av djur</string>
    <string name="text_sub_headline_plants">Din samling av växter</string>
    <string name="text_take_a_picture">Ta en bild</string>
    <string name="text_category__plants">Växter</string>
    <string name="user_score">Din poäng:</string>
    <string name="logout">Logga ut eller byt användare</string>
    <string name="topBar">topBar</string>
    <string name="cameraLogo">cameraLogo</string>
    <string name="loginSubHeadline">Välj ett namn för att spela</string>
    <string name="loginNameHint">Namn</string>
    <string name="loginPasswordHint">Lösenord</string>
    <string name="scoreSubHeadline">Poäng och utmärkelser</string>
    <string name="usernameHeadlineText">Användarnamn</string>
    <string name="scoreAnimalText">Poäng för djur:</string>
    <string name="scorePlantText">Poäng för växter:</string>
    <string name="scoreLevelText">Klara nivåer:</string>
    <string name="ScoreAwardText">Utmärkelser:</string>
    <string name="scoreAnimals">999999</string>
    <string name="scorePlants">999999</string>
    <string name="scoreLevel">000</string>
    <string name="scoreAwards">00</string>
    <string name="animalSubHeadline">Vanlig Groda</string>
    <string name="animalInfoText">Grodan är variabel i färgen, men vanligen beige, ljusbrun till mörkbrun eller grönbrun, samt med mörkare fläckar. Rödaktiga och nästan svarta individer förekommer också. Undersidan är ljus, och vanligtvis omönstrad. Den blir mellan 5 och 9 cm lång. Vanlig groda finns i stränder och sankmark, samt gärna i fuktiga områden i skogar och ängar och i mindre vattensamlingar. Den kan också förekomma längre från vatten, på åkrar och andra odlade områden. Den är aktiv under större delen av dygnet utom den allra varmaste tiden på dagen. Den är fridlyst i hela Skandinavien. Läs mer på wikipedia.</string>
    <string name="animal1Score">00</string>
    <string name="takePictureText">Ta en bild</string>
    <string name="addImageText">Lägg till en bild</string>
    <string name="objectScore">Poäng för lövgroda: 00</string>
    <string name="objectLevel">Nivå: 1</string>
    <string name="imageLocationText">Plats för fotot:</string>
    <string name="symbolBackArrow">BackArrow</string>
    <string name="imgLoginBackground">Login background</string>
    <string name="btnPlay">Play button</string>
    <string name="animalImg">Vanlig Groda</string>
    <string name="symbolPlus">Add</string>
    <string name="symbolCamera">Take picture</string>
    <string name="animalObjectName">Animal</string>
    <string name="animalObjectDesc">objectName</string>
    <string name="symbolAward">awardSymbol</string>
    <string name="symbolScore">scoreSymbol</string>
    <string name="text_sub_headline_howtoplay">Spelbeskrivning</string>
    <string name="howtoplaySubDesc">how to play sub headline</string>

    <string name="nav_text_home">Hem</string>
    <string name="nav_text_help">Hjälp</string>
    <string name="nav_text_score">Poäng</string>
    <string name="nav_text_settings">Inställningar</string>
    <string name="helpAwardHeadline">Utmärkelser</string>
    <string name="helpAwardInfo">Du får utmärkelser...</string>
    <string name="TextTakeNewPhoto">Ta ny bild</string>
    <string name="TextChoosePlaceForPhoto">Välj vilket djur din bild föreställer</string>
</resources>
