<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_headline"
        android:textAlignment="center"

        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/howtoplay_sub_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/howtoplaySubDesc"
            android:fontFamily="sans-serif"
            android:text="@string/text_sub_headline_howtoplay"
            android:textAlignment="center"
            android:textSize="19sp"
            app:layout_constraintLeft_toLeftOf="@+id/text_headline"
            app:layout_constraintRight_toRightOf="@+id/text_headline"
            app:layout_constraintTop_toBottomOf="@+id/text_headline" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/symbolBackArrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_headline"
        app:srcCompat="@drawable/symbol_back" />

        <TextView
            android:id="@+id/textAwardHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/helpAwardHeadline"
            app:layout_constraintLeft_toLeftOf="@+id/howtoplay_sub_headline"
            app:layout_constraintTop_toBottomOf="@+id/howtoplay_sub_headline" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/symbolAward"
            app:layout_constraintRight_toRightOf="@+id/howtoplay_sub_headline"
            app:layout_constraintTop_toBottomOf="@+id/howtoplay_sub_headline"
            app:srcCompat="@drawable/symbol_crown_active"
            android:layout_marginRight="32dp" />

        <TextView
            android:id="@+id/textAwardInfo"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="4dp"
            android:text="@string/helpAwardInfo"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/textAwardHeadline"
            app:layout_constraintRight_toRightOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textAwardHeadline" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>