<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_headline"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/howtoplay_sub_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/text_sub_headline_animal"
            android:textAlignment="center"
            android:textSize="19sp"
            app:layout_constraintLeft_toLeftOf="@+id/text_headline"
            app:layout_constraintRight_toRightOf="@+id/text_headline"
            app:layout_constraintTop_toBottomOf="@+id/text_headline" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/symbolBackArrow"
            app:layout_constraintLeft_toLeftOf="@+id/text_headline"
            app:layout_constraintTop_toTopOf="@+id/text_headline"
            app:srcCompat="@drawable/symbol_back" />

        <android.support.v7.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="@+id/howtoplay_sub_headline"
            app:layout_constraintRight_toRightOf="@+id/howtoplay_sub_headline"
            app:layout_constraintTop_toBottomOf="@+id/howtoplay_sub_headline">

            <android.support.v7.widget.CardView
                android:id="@+id/animal1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                app:cardElevation="5dp">

                <TextView
                    android:id="@+id/animal_name1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="35dp"
                    android:contentDescription="@string/animalObjectDesc"
                    android:text="@string/animalObjectName"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/score_img"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="70dp"
                    android:contentDescription="@string/symbolScore"
                    android:rotation="10"
                    app:srcCompat="@drawable/symbol_score_active" />

                <ImageView
                    android:id="@+id/crown_img"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="75dp"
                    android:contentDescription="@string/symbolAward"
                    app:srcCompat="@drawable/symbol_crown_active" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/animal2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                app:cardElevation="5dp">

                <TextView
                    android:id="@+id/animal_name2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="35dp"
                    android:contentDescription="@string/animalObjectDesc"
                    android:text="@string/animalObjectName"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/animal3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                app:cardElevation="5dp">

                <TextView
                    android:id="@+id/animal_name3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="35dp"
                    android:contentDescription="@string/animalObjectDesc"
                    android:text="@string/animalObjectName"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

        </android.support.v7.widget.GridLayout>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>